codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_search_filtered.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 767
expression: popup
---
  Plugins
  Browse plugins from available marketplaces.
  Installed 0 of 3 available plugins.

  [All Plugins]  Installed (0)  BCIP Curated  Add Marketplace

  sla
› [-] Slack      Available   Press Enter to install or view plugin details.

  space enable/disable · ←/→ select marketplace · enter view details · esc close
