codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_switch_prompt_popup.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1019
expression: popup
---
› Ask 云 熙  to do anything

  deepseek-v4-pro default · /tmp/project
