codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_audio_selection_popup_narrow.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 2226
expression: popup
---
  Settings
  配 置 云 熙 专 利 智 能 体 设 置 。

› 1. Microphone  Current: System default
  2. Speaker     Current: System default

  Press enter to confirm or esc to go back
