codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__side_context_label_preserves_status_line.snap
---
source: tui/src/chatwidget/tests/side.rs
assertion_line: 401
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Check recently modified functions for compatibility                           "
"                                                                                "
"  deepseek-v4-pro                     Side from main thread · Ctrl+C to return  "
